CRM Settings Industr Type and Ownershp Type Form Async Validate and Proper Submit and toastr alert

--- a/view/src/app/models/settings/crm_settings/model-ownershipytype-crmsettings/model-ownershipytype-crmsettings.component.html
+++ b/view/src/app/models/settings/crm_settings/model-ownershipytype-crmsettings/model-ownershipytype-crmsettings.component.html
@@ -2,7 +2,7 @@
    <div class="Modal_Content" *ngIf="Type && ( Type === 'Create' || Type === 'Edit')">
       <div class="Modal_Header">
          <p>{{Type}} Ownership Type</p>
-         <span data-dismiss="modal" (click)="bsModalRef.hide()">&times;</span>
+         <span *ngIf="!Uploading" data-dismiss="modal" (click)="bsModalRef.hide()">&times;</span>
       </div>
       <form [formGroup]="Form" (ngSubmit)="onSubmit()">
          <div class="Model_Body">
@@ -11,15 +11,17 @@
                   <label>Ownership Type: </label>
                   <input type="text" formControlName="Ownership_Type">
                   <p class="error" *ngIf="Form.controls['Ownership_Type'].errors && !Form.controls['Ownership_Type'].pristine">
-                     <span *ngIf="Form.controls['Ownership_Type'].errors.required">Ownership Type is required</span>
+                     <span *ngIf="Form.controls['Ownership_Type'].errors.required"> Ownership Type is required </span>
+                     <span *ngIf="Form.controls['Ownership_Type'].errors.OwnershipType_NotAvailable"> Ownership Type Already Exist </span>
                   </p>
                </div>
             </div>
          </div>
          <div class="Model_Footer">
-            <button type="submit"  [disabled]="Form.invalid" mat-raised-button color="primary">
-               <span *ngIf="Type === 'Create'">Submit</span>
-               <span *ngIf="Type === 'Edit'">Update</span>
+            <button type="submit" [disabled]="Form.status !== 'VALID' || Uploading" mat-raised-button color="primary">
+               <span *ngIf="Type === 'Create' && !Uploading"> Submit </span>
+               <span *ngIf="Type === 'Edit' && !Uploading"> Update </span>
+               <span *ngIf="Uploading" class="UploadingBtn"> <i class="fa fa-refresh fa-spin"></i> Loading... </span>
             </button>
          </div>
       </form>
