--- a/view/src/app/models/settings/crm_settings/model-industrytype-crmsettings/model-industrytype-crmsettings.component.css
+++ b/view/src/app/models/settings/crm_settings/model-industrytype-crmsettings/model-industrytype-crmsettings.component.css
@@ -42,7 +42,13 @@
       position: absolute;
       right: 0px;
    }
-
+   .Model_Footer .UploadingBtn{
+      color: #5a798c;
+   }
+   .Model_Footer .UploadingBtn i{
+      color: #2a9e40;
+   }
+   
 
 
 /* ************************************ Create And Edit Form Style ******************************* */
