--- a/view/src/app/Components/Common-Components/header/header.component.html
+++ b/view/src/app/Components/Common-Components/header/header.component.html
@@ -1,114 +1,112 @@
 <div class="Header_Page">
    <div class="Header_One">
       <img src="assets/images/basic/Insight360.png" alt="Logo" class="Header_Logo"> 
-      <div class="Logout_Btn"> <span> Logout </span></div>
+      <div class="Logout_Btn"> <span (click)="LogOut()"> Logout </span></div>
    </div>
    <div class="Header_Two">
       <ul class="Menus">
-         <li class="Menu_List">
+         <li *ngIf="ModulesValidate('Dashboard')" class="Menu_List">
             <span class="Menu">
                <i class="material-icons">dashboard</i>
                <span> &nbsp; Dashboard </span> 
             </span>
          </li>
-        <li class="Menu_List" >
+         <li *ngIf="ModulesValidate('Crm')" class="Menu_List">
             <span class="Menu_Tree">
                <span class="Menu">
                   <i class="material-icons">people</i>
                   <span> &nbsp; CRM </span> 
                </span>
                <ul class="Menu_Tree_View">
-                  <li class="Menu_Tree_List"  [routerLink]="['/Crm_Customers_List']"><a> Customers </a></li>
-                  <li class="Menu_Tree_List"  [routerLink]="['/crm_quotations_list']"><a> Quotations </a></li>
-                  <li class="Menu_Tree_List"  [routerLink]="['/crm_saleorder_list']"><a> Sale Order </a></li>
-                  <li class="Menu_Tree_List"  [routerLink]="['/crm_invoice_list']"><a> Invoice  </a></li>
+                  <li *ngIf="SubModulesValidate('Crm_Customers_List')" class="Menu_Tree_List" [routerLink]="['/Crm_Customers_List']"><a> Customers </a></li>
+                  <li *ngIf="SubModulesValidate('Crm_Quotations_List')" class="Menu_Tree_List" [routerLink]="['/crm_quotations_list']"><a> Quotations </a></li>
+                  <li *ngIf="SubModulesValidate('Crm_SaleOrders_List')" class="Menu_Tree_List" [routerLink]="['/crm_saleorder_list']"><a> Sale Order </a></li>
+                  <li *ngIf="SubModulesValidate('Crm_Invoice_List')" class="Menu_Tree_List" [routerLink]="['/crm_invoice_list']"><a> Invoice  </a></li>
                </ul>
             </span>
          </li>
-         <li class="Menu_List"  [routerLink]="['/main_leads']" style="outline:none;">
+         <li *ngIf="ModulesValidate('Leads')" class="Menu_List"  [routerLink]="['/main_leads']" style="outline:none;">
+            <span class="Menu">
+               <i class="material-icons">people</i>
+               <span > &nbsp; Leads </span> 
+            </span>
+         </li>
+         <li *ngIf="ModulesValidate('Hrms')" class="Menu_List"  [routerLink]="['/main_hrms']" style="outline:none;">
+            <span class="Menu">
+               <i class="material-icons">people</i>
+               <span > &nbsp; HRMS </span> 
+            </span>
+         </li>
+         <li *ngIf="ModulesValidate('Hr')" class="Menu_List" [routerLink]="['/main_hr']" style="outline:none;">
+            <span class="Menu">
+               <i class="material-icons">people</i>
+               <span > &nbsp; HR </span> 
+            </span>
+         </li>
+         <li *ngIf="ModulesValidate('Purchase')" class="Menu_List">
+            <span class="Menu_Tree">
                <span class="Menu">
                   <i class="material-icons">people</i>
-                  <span > &nbsp; Leads </span> 
+                  <span> &nbsp; Purchase </span> 
                </span>
-            </li>
-            <li class="Menu_List"  [routerLink]="['/main_hrms']" style="outline:none;">
-                <span class="Menu">
-                   <i class="material-icons">people</i>
-                   <span > &nbsp; HRMS </span> 
-                </span>
-             </li>
-             <li class="Menu_List"  [routerLink]="['/main_hr']" style="outline:none;">
+               <ul class="Menu_Tree_View">
+                  <li *ngIf="SubModulesValidate('Purchase_Requests_List')" class="Menu_Tree_List" [routerLink]="['/purchase_request_list']"><a> Purchase Requests </a></li>
+                  <li *ngIf="SubModulesValidate('Purchase_Quotations_List')" class="Menu_Tree_List" [routerLink]="['/Purchase_Quotations_List']"><a> Purchase Quotations </a></li>
+                  <li *ngIf="SubModulesValidate('Purchase_Orders_List')" class="Menu_Tree_List" [routerLink]="['/Purchase_Orders_List']"><a> Purchase Orders </a></li>
+                  <li *ngIf="SubModulesValidate('Purchase_VendorBills_List')" class="Menu_Tree_List" [routerLink]="['/Vendor_Bills_List']"><a> Vendor Bills </a></li>
+                  <li *ngIf="SubModulesValidate('Purchase_Vendors_List')" class="Menu_Tree_List" [routerLink]="['/Vendor_List']"><a> Vendor </a></li>
+               </ul>
+            </span>
+         </li>
+         <li *ngIf="ModulesValidate('Inventory')" class="Menu_List" >
+            <span class="Menu_Tree">
                <span class="Menu">
                   <i class="material-icons">people</i>
-                  <span > &nbsp; HR </span> 
+                  <span> &nbsp; Inventory </span> 
                </span>
-            </li>
-             <li class="Menu_List" >
-                    <span class="Menu_Tree">
-                       <span class="Menu">
-                          <i class="material-icons">people</i>
-                          <span> &nbsp; Purchase </span> 
-                       </span>
-                       <ul class="Menu_Tree_View">
-                          <li class="Menu_Tree_List"  [routerLink]="['/purchase_request_list']"><a> PurchaseRequest </a></li>
-                          <li class="Menu_Tree_List"  [routerLink]="['/Purchase_Quotations_List']"><a> PurchaseQuotations </a></li>
-                          <li class="Menu_Tree_List"  [routerLink]="['/Purchase_Orders_List']"><a> PurchaseOrder </a></li>
-                          <li class="Menu_Tree_List"  [routerLink]="['/Vendor_Bills_List']"><a> VendorBills </a></li>
-                          <li class="Menu_Tree_List"  [routerLink]="['/Vendor_List']"><a> Vendor</a></li>
-                       </ul>
-                    </span>
-                 </li>
-                 <li class="Menu_List" >
-                     <span class="Menu_Tree">
-                        <span class="Menu">
-                           <i class="material-icons">people</i>
-                           <span> &nbsp; Inventory </span> 
-                        </span>
-                        <ul class="Menu_Tree_View">
-                           <li class="Menu_Tree_List"  [routerLink]="['/Inventory_deliveryorder_list']"><a> Delivery Orders </a></li>
-                           <!-- <li class="Menu_Tree_List"  [routerLink]="['/']"><a> Direct Purchase </a></li> -->
-                           <li class="Menu_Tree_List"  [routerLink]="['/internal_transfer_list']"><a> Internal Transfer </a></li>
-                           <!-- <li class="Menu_Tree_List"  [routerLink]="['/']"><a>Stock Values</a></li> -->
-                           <li class="Menu_Tree_List"  [routerLink]="['/to_receive_list']"><a>To Receive</a></li>
-                        </ul>
-                     </span>
-                  </li>
-                 <li class="Menu_List" >
-                    <span class="Menu_Tree">
-                       <span class="Menu">
-                          <i class="material-icons">people</i>
-                          <span> &nbsp; Accounts </span> 
-                       </span>
-                       <ul class="Menu_Tree_View">
-                          <li class="Menu_Tree_List"  [routerLink]="['/account_customer_list']"><a> Customer </a></li>
-                          <li class="Menu_Tree_List"  [routerLink]="['/crm_saleorder_list']"><a> Sale Order </a></li>
-                          <li class="Menu_Tree_List"  [routerLink]="['/account_customer_invoice_list']"><a> CustomerInvoice </a></li>
-                          <li class="Menu_Tree_List"  [routerLink]="['/account_customer_payments_list']"><a> CustomerPayments </a></li>
-                          <li class="Menu_Tree_List"  [routerLink]="['/account_vendor_list']"><a>Vendor</a></li>
-                          <li class="Menu_Tree_List"  [routerLink]="['/Purchase_Orders_List']"><a>Purchase Order</a></li>
-                          <li class="Menu_Tree_List"  [routerLink]="['/account_vendor_bills_list']"><a>Vendor Bills</a></li>
-                          <li class="Menu_Tree_List"  [routerLink]="['/vendor_payment_list']"><a>Vendor Payments</a></li>
-                   </ul>
-                    </span>
-                 </li>
-         <li class="Menu_List" >
+               <ul class="Menu_Tree_View">
+                  <li *ngIf="SubModulesValidate('Inventory_DeliveryOrders_List')" class="Menu_Tree_List" [routerLink]="['/Inventory_deliveryorder_list']"><a> Delivery Orders </a></li>
+                  <li *ngIf="SubModulesValidate('Inventory_InternalTransfer_List')" class="Menu_Tree_List" [routerLink]="['/internal_transfer_list']"><a> Internal Transfer </a></li>
+                  <li *ngIf="SubModulesValidate('Inventory_ToReceive_List')" class="Menu_Tree_List" [routerLink]="['/to_receive_list']"><a> To Receive </a></li>
+               </ul>
+            </span>
+         </li>
+         <li *ngIf="ModulesValidate('Accounts')" class="Menu_List" >
+            <span class="Menu_Tree">
+               <span class="Menu">
+                  <i class="material-icons">people</i>
+                  <span> &nbsp; Accounts </span> 
+               </span>
+               <ul class="Menu_Tree_View">
+                  <li *ngIf="SubModulesValidate('Accounts_Customers_List')" class="Menu_Tree_List" [routerLink]="['/account_customer_list']"><a> Customers </a></li>
+                  <li *ngIf="SubModulesValidate('Accounts_SaleOrders_List')" class="Menu_Tree_List" [routerLink]="['/crm_saleorder_list']"><a> Sale Orders </a></li>
+                  <li *ngIf="SubModulesValidate('Accounts_CustomerInvoices_List')" class="Menu_Tree_List" [routerLink]="['/account_customer_invoice_list']"><a> Customer Invoice </a></li>
+                  <li *ngIf="SubModulesValidate('Accounts_CustomerPayments_List')" class="Menu_Tree_List" [routerLink]="['/account_customer_payments_list']"><a> Customer Payments </a></li>
+                  <li *ngIf="SubModulesValidate('Accounts_Vendors_List')" class="Menu_Tree_List" [routerLink]="['/account_vendor_list']"><a>Vendors</a></li>
+                  <li *ngIf="SubModulesValidate('Accounts_PurchaseOrders_List')" class="Menu_Tree_List" [routerLink]="['/Purchase_Orders_List']"><a>Purchase Orders</a></li>
+                  <li *ngIf="SubModulesValidate('Accounts_VendorBills_List')" class="Menu_Tree_List" [routerLink]="['/account_vendor_bills_list']"><a>Vendor Bills</a></li>
+                  <li *ngIf="SubModulesValidate('Accounts_VendorPayments_List')" class="Menu_Tree_List" [routerLink]="['/vendor_payment_list']"><a>Vendor Payments</a></li>
+            </ul>
+            </span>
+         </li>
+         <li *ngIf="ModulesValidate('Settings')" class="Menu_List" >
             <span class="Menu_Tree">
                <span class="Menu">
                   <i class="material-icons">settings</i>
                   <span> &nbsp; Settings </span> 
                </span>
                <ul class="Menu_Tree_View">
-                  <li class="Menu_Tree_List" [routerLink]="['/company_settings']"><a> Company Settings </a></li>
-                  <li class="Menu_Tree_List" [routerLink]="['/CRM_Settings']"><a> CRM Settings </a></li>
-                  <li class="Menu_Tree_List"  [routerLink]="['/lead_settings']"><a> Lead Settings </a></li>
-                  <li class="Menu_Tree_List" [routerLink]="['/purchase_settings']"><a> Purchase Settings  </a></li>
-                  <li class="Menu_Tree_List" [routerLink]="['/Hrms_Settings']" ><a> HRMS Settings  </a></li>
-                  <li class="Menu_Tree_List" [routerLink]="['/Hr_Settings']" ><a> HR Settings </a></li>
-                  <li class="Menu_Tree_List" [routerLink]="['/Inventory_Settings']" ><a> Inventory Settings </a></li>
-                  <li class="Menu_Tree_List" [routerLink]="['/Product_Settings']" ><a> Product Settings </a></li>
-                  <li class="Menu_Tree_List" [routerLink]="['/Account_Settings']"><a> Account Settings </a></li>
-                  <li class="Menu_Tree_List" [routerLink]="['/User_Management']"><a> User Management  </a></li>
-                  <li class="Menu_Tree_List" [routerLink]="['/User_Permissions']"><a> User Permissions </a></li>
+                  <li *ngIf="SubModulesValidate('Settings_Company_Settings')" class="Menu_Tree_List" [routerLink]="['/company_settings']"><a> Company Settings </a></li>
+                  <li *ngIf="SubModulesValidate('Settings_Crm_Settings')" class="Menu_Tree_List" [routerLink]="['/CRM_Settings']"><a> CRM Settings </a></li>
+                  <li *ngIf="SubModulesValidate('Settings_Leads_Settings')" class="Menu_Tree_List" [routerLink]="['/lead_settings']"><a> Leads Settings </a></li>
+                  <li *ngIf="SubModulesValidate('Settings_Purchase_Settings')" class="Menu_Tree_List" [routerLink]="['/purchase_settings']"><a> Purchase Settings  </a></li>
+                  <li *ngIf="SubModulesValidate('Settings_Hrms_Settings')" class="Menu_Tree_List" [routerLink]="['/Hrms_Settings']" ><a> HRMS Settings  </a></li>
+                  <li *ngIf="SubModulesValidate('Settings_Hr_Settings')" class="Menu_Tree_List" [routerLink]="['/Hr_Settings']" ><a> HR Settings </a></li>
+                  <li *ngIf="SubModulesValidate('Settings_Inventory_Settings')" class="Menu_Tree_List" [routerLink]="['/Inventory_Settings']" ><a> Inventory Settings </a></li>
+                  <li *ngIf="SubModulesValidate('Settings_Product_Settings')" class="Menu_Tree_List" [routerLink]="['/Product_Settings']" ><a> Product Settings </a></li>
+                  <li *ngIf="SubModulesValidate('Settings_Account_Settings')" class="Menu_Tree_List" [routerLink]="['/Account_Settings']"><a> Account Settings </a></li>
+                  <li *ngIf="SubModulesValidate('Settings_UserManagement_Settings')" class="Menu_Tree_List" [routerLink]="['/User_Management']"><a> User Management  </a></li>
+                  <li *ngIf="SubModulesValidate('Settings_UserPermissions_Settings')" class="Menu_Tree_List" [routerLink]="['/User_Permissions']"><a> User Permissions </a></li>
                </ul>
             </span>
          </li>
