--- a/view/src/app/Components/Settings/CRM-Settings/Sub-Components/industry-type-crm-settings/industry-type-crm-settings.component.html
+++ b/view/src/app/Components/Settings/CRM-Settings/Sub-Components/industry-type-crm-settings/industry-type-crm-settings.component.html
@@ -1,7 +1,7 @@
 <!-- Page Header Part -->
    <div class="row header_part">
       <div class="col-sm-6">
-         <button class="Create_Button" mat-raised-button (click)="CreateIndustrytype()"> + Create </button>
+         <button *ngIf="_Create" class="Create_Button" mat-raised-button (click)="CreateIndustrytype()"> + Create </button>
       </div>
       <div class="col-sm-6">
          <div class="Search_Section">
@@ -46,13 +46,13 @@
                   </span>
                </td>
                <td>
-                  <button (click)="ViewIndustrytype(i)" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
+                  <button *ngIf="_View" (click)="ViewIndustrytype(i)" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
                      <i class="material-icons">zoom_in</i>
                   </button>
-                  <button  (click)="EditIndustrytype(i)" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+                  <button *ngIf="_Edit" (click)="EditIndustrytype(i)" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
                      <i class="material-icons">edit</i>
                   </button>
-                  <button (click)=" DeleteIndustryType(i)" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
+                  <button *ngIf="_Delete" (click)=" DeleteIndustryType(i)" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
                      <i class="material-icons">delete_forever</i>
                   </button>
                </td>
