Settings Single Field Async Validations Update

--- a/view/src/app/Components/Settings/CRM-Settings/Sub-Components/activity-priority-type-crm-settings/activity-priority-type-crm-settings.component.html
+++ b/view/src/app/Components/Settings/CRM-Settings/Sub-Components/activity-priority-type-crm-settings/activity-priority-type-crm-settings.component.html
@@ -31,10 +31,10 @@
                   <span class="Style_1">{{ Item.Activity_Priority }}</span>
                </td>
                <td>
-                  <span class="Style_1"> {{ Item.Created_By }}</span>
+                  <span class="Style_1"> {{Item.Created_By.Name}} </span>
                </td>
                <td>
-                  <span class="Style_1">{{ Item.updatedAt | date:'medium' }}</span>
+                  <span class="Style_1">{{ Item.Last_Modified_By.Name }}</span>
                </td>
                <td>
                   <button (click)="ViewActivitypriority(i)" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
