--- a/view/src/app/models/settings/crm_settings/model-ownershipytype-crmsettings/model-ownershipytype-crmsettings.component.css
+++ b/view/src/app/models/settings/crm_settings/model-ownershipytype-crmsettings/model-ownershipytype-crmsettings.component.css
@@ -167,3 +167,11 @@
     margin-bottom: 10px;
     font-size: 14px;
  }
+ .view_item .Data .Badge{
+    color: #4ab65f;
+    padding: 2px 4px;
+    border-radius: 20px;
+    font-size: 10px;
+    letter-spacing: 0.4px;
+    border: 1px solid #4ab65f;
+}
