--- a/view/src/app/models/settings/hrms_settings/model-leavetype-hrmssettings/model-leavetype-hrmssettings.component.css
+++ b/view/src/app/models/settings/hrms_settings/model-leavetype-hrmssettings/model-leavetype-hrmssettings.component.css
@@ -42,6 +42,13 @@
     position: absolute;
     right: 0px;
  }
+ .Model_Footer .UploadingBtn{
+    color: #5a798c;
+ }
+ .Model_Footer .UploadingBtn I{
+    color: #2a9e40;
+ }
+
 
 
 
