--- a/view/src/app/Components/Settings/CRM-Settings/Sub-Components/activity-type-crm-settings/activity-type-crm-settings.component.css
+++ b/view/src/app/Components/Settings/CRM-Settings/Sub-Components/activity-type-crm-settings/activity-type-crm-settings.component.css
@@ -62,7 +62,7 @@
       background-color: #ffffff;
    }
    .Table_Section table tbody tr {
-      line-height: 42px;
+      height: 42px;
       text-align: center;
       align-items: center;
       border-bottom: 1px solid #eaeaea;
@@ -82,6 +82,19 @@
       color: rgba(77, 106, 122, 0.84);
       font-weight: 600;
    }
+   .Table_Section table tbody tr td .Style_1 .Badge{
+    color: #4ab65f;
+    padding: 2px 4px;
+    border-radius: 20px;
+    font-size: 10px;
+    letter-spacing: 0.4px;
+    border: 1px solid #4ab65f;
+}
+.Table_Section table tbody tr td .Style_1 .Time{
+    font-size: 12px;
+    font-weight: 500;
+    color: #8ca5b3;
+}
    .Table_Section table tbody tr td .Action_Section{
       color: #ffffff;
       height: 35px;
