--- a/view/src/app/models/settings/crm_settings/model-activitypriority-crmsettings/model-activitypriority-crmsettings.component.css
+++ b/view/src/app/models/settings/crm_settings/model-activitypriority-crmsettings/model-activitypriority-crmsettings.component.css
@@ -42,7 +42,12 @@
       position: absolute;
       right: 0px;
    }
-
+   .Model_Footer .UploadingBtn{
+    color: #5a798c;
+ }
+ .Model_Footer .UploadingBtn I{
+    color: #2a9e40;
+ }
 
 
 /* ************************************ Create And Edit Form Style ******************************* */
