--- a/view/src/app/Components/Settings/HR-Settings/SubComponents/department-hr-settings/department-hr-settings.component.html
+++ b/view/src/app/Components/Settings/HR-Settings/SubComponents/department-hr-settings/department-hr-settings.component.html
@@ -31,19 +31,19 @@
                   <span class="Style_1">{{ Item.Department }}</span>
                </td>
                <td>
-                  <span class="Style_1">{{ Item.Created_By }}</span>
+                  <span class="Style_1">{{Item.Created_By.Name}}</span>
                </td>
                <td>
-                  <span class="Style_1">{{Item.updatedAt | date:'medium'}}</span>
+                  <span class="Style_1">{{ Item.Last_Modified_By.Name }}</span>
                </td>
                <td>
-                  <button (click)="ViewDepartment(i)" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
+                  <button *ngIf="_View" (click)="ViewDepartment(i)" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
                      <i class="material-icons">zoom_in</i>
                   </button>
-                  <button  (click)="EditDepartment(i)" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+                  <button *ngIf="_Edit" (click)="EditDepartment(i)" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
                      <i class="material-icons">edit</i>
                   </button>
-                  <button (click)=" DeleteDepartment(i)" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
+                  <button *ngIf="_Delete" (click)=" DeleteDepartment(i)" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
                      <i class="material-icons">delete_forever</i>
                   </button>
                </td>
