--- a/view/src/app/Components/Settings/HR-Settings/SubComponents/employee-category-hr-settings/employee-category-hr-settings.component.html
+++ b/view/src/app/Components/Settings/HR-Settings/SubComponents/employee-category-hr-settings/employee-category-hr-settings.component.html
@@ -1,3 +1,16 @@
+<div [ngClass]="{'Hide': !Loader}" class="DataLoaderStyle_1">
+      <div class="Loading">
+            <div class="spinner">
+               <div class="rect1"></div>
+               <div class="rect2"></div>
+               <div class="rect3"></div>
+               <div class="rect4"></div>
+               <div class="rect5"></div>
+               <div class="rect6"></div>
+            </div>
+      </div>
+    </div>
+    <div class="LoadedDataStyle_1" [ngClass]="{'Show': !Loader}">
 <!-- Page Header Part -->
    <div class="row header_part">
       <div class="col-sm-6">
@@ -31,24 +44,25 @@
                      <span class="Style_1">{{ Item.Employee_Category }}</span>
                   </td>
                   <td>
-                     <span class="Style_1">{{Item.Created_By}}</span>
+                     <span class="Style_1">{{Item.Created_By.Name}}</span>
                   </td>
                   <td>
-                     <span class="Style_1">{{Item.updatedAt | date:'medium'}}</span>
+                     <span class="Style_1">{{ Item.Last_Modified_By.Name }}</span>
                   </td>
                   <td>
-                     <button (click)="ViewEmployeeCategory(i)" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
+                     <button *ngIf="_View" (click)="ViewEmployeeCategory(i)" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
                         <i class="material-icons">zoom_in</i>
                      </button>
-                     <button  (click)="EditEmployeecategory(i)" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+                     <button  *ngIf="_Edit" (click)="EditEmployeecategory(i)" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
                         <i class="material-icons">edit</i>
                      </button>
-                     <button (click)=" DeleteEmployeeCategory(i)" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
+                     <button *ngIf="_Delete" (click)=" DeleteEmployeeCategory(i)" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
                         <i class="material-icons">delete_forever</i>
                      </button>
                   </td>
                </tr>
             </tbody>
          </table>
+      </div>
       </div>
 
