--- a/view/src/app/Components/Settings/HRMS-Settings/main-hrms-settings/main-hrms-settings.component.css
+++ b/view/src/app/Components/Settings/HRMS-Settings/main-hrms-settings/main-hrms-settings.component.css
@@ -107,5 +107,6 @@
  .Page_Content.HRMS_Settings .Main_Section  .Right_Section{
     width:79%;
     margin-left: 1%;
+    position: relative;
  }
  
