--- a/view/src/app/Components/Settings/Lead-Settings/main-leads-settings/main-leads-settings.component.css
+++ b/view/src/app/Components/Settings/Lead-Settings/main-leads-settings/main-leads-settings.component.css
@@ -107,5 +107,6 @@
  .Page_Content.Lead_Settings .Main_Section  .Right_Section{
     width:79%;
     margin-left: 1%;
+    position: relative;
  }
  
