--- a/view/src/app/Components/Settings/CRM-Settings/Sub-Components/activity-status-type-crm-settings/activity-status-type-crm-settings.component.html
+++ b/view/src/app/Components/Settings/CRM-Settings/Sub-Components/activity-status-type-crm-settings/activity-status-type-crm-settings.component.html
@@ -45,18 +45,18 @@
                </td>
                <td>
                 <span class="Style_1"> {{Item.Created_By.Name}}</span>
-                    <!-- <span class="Badge"> {{Item.Created_By.User_Type.User_Type}} </span>
+                    <!-- <span class="Badge"> {{Item.Created_By.User_Type.User_Type}} </span> -->
                     <br> 
                     <span class="Time"> {{Item.createdAt | date:'medium'}}  </span>
-                </span> -->
+                </span>
              </td>
              <td>
                 <span class="Style_1"> 
                    {{Item.Last_Modified_By.Name}} </span>
-                   <!-- <span class="Badge"> {{Item.Last_Modified_By.User_Type.User_Type}} </span> 
+                   <!-- <span class="Badge"> {{Item.Last_Modified_By.User_Type.User_Type}} </span>  -->
                    <br> 
                    <span class="Time"> {{Item.updatedAt | date:'medium'}}  </span>
-                </span> -->
+                </span>
              </td>
                <td>
                   <button *ngIf="_View" (click)="ViewActivitystatus(i)" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
