--- a/view/src/app/Components/Settings/CRM-Settings/Sub-Components/activity-type-crm-settings/activity-type-crm-settings.component.html
+++ b/view/src/app/Components/Settings/CRM-Settings/Sub-Components/activity-type-crm-settings/activity-type-crm-settings.component.html
@@ -45,17 +45,16 @@
                </td>
                <td>
                 <span class="Style_1"> {{Item.Created_By.Name}}
-                    <!-- <span class="Badge"> {{Item.Created_By.User_Type.User_Type}} </span>
+                    <!-- <span class="Badge"> {{Item.Created_By.User_Type.User_Type}} </span> -->
                     <br> 
-                    <span class="Time"> {{Item.createdAt | date:'medium'}}  </span> -->
+                    <span class="Time"> {{Item.createdAt | date:'medium'}}  </span>
                 </span>
              </td>
              <td>
-                <span class="Style_1"> 
-                   <!-- {{Item.Last_Modified_By.Name}} 
-                   <span class="Badge"> {{Item.Last_Modified_By.User_Type.User_Type}} </span> 
+                <span class="Style_1"> {{Item.Last_Modified_By.Name}} 
+                   <!-- <span class="Badge"> {{Item.Last_Modified_By.User_Type.User_Type}} </span>  -->
                    <br> 
-                   <span class="Time"> {{Item.updatedAt | date:'medium'}}  </span> -->
+                   <span class="Time"> {{Item.updatedAt | date:'medium'}}  </span>
                 </span>
              </td>
                <td>
